--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -8,7 +8,7 @@
                     <div class="blog-entry ftco-animate d-md-flex">
                         <a href="single.html" class="img img-2" style="background-image: url(images/image_1.jpg);"></a>
                         <div class="text text-2 pl-md-4">
-              <h3 class="mb-2"><a href="single.html">A Loving Heart is the Truest Wisdom</a></h3>
+              <h3 class="mb-2"><a href="single.html">РАБОТАЕТ ГРАНД БИБСТЕР</a></h3>
               <div class="meta-wrap">
                                 <p class="meta">
                     <span><i class="icon-calendar mr-2"></i>June 28, 2019</span>
