Удалил все лишнее + написал кто делал в footer

--- a/templates/shared/header.html
+++ b/templates/shared/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <meta charset="utf-8">
-    <title>Andrea - Free Bootstrap 4 Template by Colorlib</title>
+    <title>CulMap</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
