--- a/templates/shared/footer.html
+++ b/templates/shared/footer.html
@@ -1,3 +1,3 @@
 <p class="pfooter">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Made and create by <a href="https://lamart.site/">Lamart</a>
 </p>
