--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -27,10 +27,13 @@
 
 	</div><!-- END COLORLIB-PAGE -->
 
+
 <div class="map" id="map"></div>
 
+{% block content %}
+ {% endblock %}
 
  {% include "shared/js.html" %}
-<script src="https://maps.google.com/maps/api/js?key=AIzaSyA_o0mcO6j1a86JKyvtibLhwaccAICp2i8&callback=initMap" async defer></script>
+
 </body>
 </html>
