--- a/static/main-static/css/style.css
+++ b/static/main-static/css/style.css
@@ -8133,24 +8133,6 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 
-.menu-hide {
-      top: 0;
-      -moz-transform: translateX(-67px);
-      -webkit-transform: translateX(-67px);
-      -ms-transform: translateX(-67px);
-      -o-transform: translateX(-67px);
-      transform: translateX(-67px);
-}
-
-.menu-appear {
-      top: 0;
-      -moz-transform: translateX(0);
-      -webkit-transform: translateX(0);
-      -ms-transform: translateX(0);
-      -o-transform: translateX(0);
-      transform: translateX(0);
-}
-
 body {
   font-family: "Poppins", Arial, sans-serif;
   background: #fff;
@@ -8158,6 +8140,7 @@ body {
   line-height: 1.8;
   font-weight: 400;
   color: #666666; }
+
   body.offcanvas {
     overflow-x: hidden; }
     body.offcanvas #colorlib-aside {
@@ -8177,6 +8160,18 @@ body {
       -ms-transform: translateX(270px);
       -o-transform: translateX(270px);
       transform: translateX(270px); }
+
+  body.offcanvas-info #colorlib-section-info{
+      -moz-transform: translateX(0);
+      -webkit-transform: translateX(0);
+      -ms-transform: translateX(0);
+      -o-transform: translateX(0);
+      transform: translateX(0);
+      width: 420px;
+      background: #fff;
+      z-index: 999;
+      position: fixed;
+  }
 
 a {
   -webkit-transition: .3s all ease;
@@ -8199,6 +8194,38 @@ h1, h2, h3, h4, h5,
   width: 100%;
   overflow: hidden;
   position: relative; }
+
+#colorlib-section-info {
+  padding-top: 5em;
+  padding-bottom: 40px;
+  padding-left: 2em;
+  padding-right: 2em;
+  position: fixed;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  overflow-y: hidden;
+  z-index: 1001;
+  background: #fff;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  border-right: 1px solid #e6e6e6;
+}
+
+@media (max-width: 10000px) {
+    #colorlib-section-info{
+      width: 320px;
+      -moz-transform: translateX(-320px);
+      -webkit-transform: translateX(-320px);
+      -ms-transform: translateX(-320px);
+      -o-transform: translateX(-320px);
+      transform: translateX(-320px);
+      padding-top: 2em;
+      background: rgba(0, 0, 0, 0.04); } }
 
 #colorlib-aside {
   padding-top: 5em;
@@ -9324,6 +9351,22 @@ textarea.form-control {
   text-align: center;
   font-size: 40px;
   color: black;
-  width: 40px;
-  height: 40px;
+  transform: rotateZ(0deg);
+  transition: all 0.5s ease;
+}
+
+.info-section-open {
+  transform: translateX(370px) rotateZ(-180deg);
+  transition: all 0.5s ease;
+}
+
+.line{
+  width: 100%;
+  background-color: #d6d6d6;
+  height: 1px;
+  width: 100%;
+  position: fixed;
+  z-index: 998;
+  margin-top: 35px;
+  left: 0;
 }
