--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -14,17 +14,24 @@
     <body>
 
         <div id="colorlib-page">
-            <div class = "pointer">></div>
-            <a href="#" class="menu-hide js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-            <aside id="colorlib-aside" role="complementary" class="js-fullheight">
+            <div class = "pointer" id = "section-info">></div>
+            <div> </div>
+            <aside id="colorlib-section-info" role="complementary" class="js-fullheight">
+                <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" id = "section-menu"><i></i></a>
+                <aside id="colorlib-aside" role="complementary" class="js-fullheight">
 
-                {% include "shared/navigation.html" %}
 
-                <div class="colorlib-footer">
-                    {% include "shared/footer.html" %}
-                </div>
 
-            </aside> <!-- END COLORLIB-ASIDE -->
+                    {% include "shared/navigation.html" %}
+
+                    <div class="colorlib-footer">
+                        {% include "shared/footer.html" %}
+                    </div>
+
+                </aside> <!-- END COLORLIB-ASIDE -->
+                <div class="line"> </div>
+            </aside>
+
         </div><!-- END COLORLIB-PAGE -->
 
         <div class="map" id="map"></div>
