--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -11,10 +11,10 @@
 
         <title>CulMap</title>
     </head>
-    <body>
+    <body class="offcanvas-info">
 
         <div id="colorlib-page">
-            <div class = "pointer" id = "section-info">></div>
+            <div class = "pointer info-section-open" id = "section-info">></div>
             <div> </div>
             <aside id="colorlib-section-info" role="complementary" class="js-fullheight">
                 <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" id = "section-menu"><i></i></a>
@@ -30,6 +30,8 @@
 
                 </aside> <!-- END COLORLIB-ASIDE -->
                 <div class="line"> </div>
+
+                <div id="name"></div>
             </aside>
 
         </div><!-- END COLORLIB-PAGE -->
