--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -31,7 +31,7 @@
                 </aside> <!-- END COLORLIB-ASIDE -->
                 <div class="line"> </div>
 
-                <div id="name"></div>
+                <div id="name">gfdgd</div>
             </aside>
 
         </div><!-- END COLORLIB-PAGE -->
