--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -14,9 +14,12 @@
     <body class="offcanvas-info">
 
         <div id="colorlib-page">
-            <div class = "pointer info-section-open" id = "section-info">></div>
-            <div> </div>
+            <div class="pointer info-section-open" id = "section-info">
+                <img src="{% static "pictures/pointer.png" %}" class="image-pointer">
+            </div>
             <aside id="colorlib-section-info" role="complementary" class="js-fullheight">
+                <div class = "border-style-right"></div>
+                <div class = "border-style-left"></div>
                 <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" id = "section-menu"><i></i></a>
                 <aside id="colorlib-aside" role="complementary" class="js-fullheight">
 
@@ -29,9 +32,7 @@
                     </div>
 
                 </aside> <!-- END COLORLIB-ASIDE -->
-                <div class="line"> </div>
-
-                <div id="name">gfdgd</div>
+                <img src="" alt="" id="image" class="image">
             </aside>
 
         </div><!-- END COLORLIB-PAGE -->
