--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -15,7 +15,7 @@
 
         <div id="colorlib-page">
             <div class="pointer info-section-open" id = "section-info">
-                <img src="{% static "pictures/pointer.png" %}" class="image-pointer">
+                <img src="{% static "pictures/pointer.svg" %}" class="image-pointer">
             </div>
             <aside id="colorlib-section-info" role="complementary" class="js-fullheight">
                 <div class = "border-style-right"></div>
