--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -32,7 +32,11 @@
                     </div>
 
                 </aside> <!-- END COLORLIB-ASIDE -->
-                <img src="" alt="" id="image" class="image">
+                <div id="image" class="image"> </div>
+                <div class="boxes">
+                    <h1 id = "name"></h1>
+                    <p id = "comment"></p>
+                </div>
             </aside>
 
         </div><!-- END COLORLIB-PAGE -->
