--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -11,7 +11,7 @@
 
         <title>CulMap</title>
     </head>
-    <body class="offcanvas-info image-back-contact">
+    <body class="offcanvas-info" style ="background:#66ff66" >
 
         <div id="colorlib-page">
                 <div class = "border-style-left"></div>
@@ -33,16 +33,16 @@
                     color: blue;
                     font-weight: bold;
                     position: absolute;
-                    margin: auto;
-                    font-size: 20px;
-                    ">
-                    <marquee direction = 'left'>Здравствуйте, мы рады видеть вас на нашем сайте</marquee>
+                    width: 460px;
+                    margin-left: 57px;
+                    "><div>
+                            <h>Здравствуйте, это информация о создателях этого проекта
+                            </h>
+                    <div>>Заварин Михаил Алексеевич</div></div>
+                </div>
 
 
                 </div>
-
-            <div class="rectangle"></div>
-
             </aside>
 
         </div><!-- END COLORLIB-PAGE -->
