--- a/templates/shared/navigation.html
+++ b/templates/shared/navigation.html
@@ -1,7 +1,7 @@
 <nav id="colorlib-main-menu" role="navigation">
     <ul>
-        <li class="colorlib-active"><a href="">Home</a></li>
+        <li><a href="/">Map</a></li>
         <li><a href="about">About</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="contact">Contact</a></li>
     </ul>
 </nav>
