доделал нормальный ABOUT , начал делать CONTACT , не доделал.

--- a/static/main-static/css/style.css
+++ b/static/main-static/css/style.css
@@ -9437,7 +9437,7 @@ textarea.form-control {
   margin-left: 135px
 }
 
-.image-back-contact{
+.image-back-about{
   background: url('/static/pictures/about.jpg') no-repeat center center fixed;
   background-size: cover;
   color: #fff;
@@ -9448,9 +9448,127 @@ textarea.form-control {
 .rectangle {
     display: table;
     width: 600px;
-    height: 580px;
+    height: 230px;
     background: white;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+}
+
+.text-rectangle {
+  color: cadetblue;
+  text-align: center;
+}
+
+.text-rectangle-thx {
+  color: red;
+  text-align: center;
+}
+
+.rectangle-zavarin {
+    display: table;
+    width: 800px;
+    height: 230px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    background: #98ED00;
+}
+
+.rectangle-tarasov {
+    display: table;
+    width: 800px;
+    height: 230px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    background: #00BD39;
+}
+
+.rectangle-anohin {
+    display: table;
+    width: 800px;
+    height: 230px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    background: #A61700;
+}
+
+.text-zavarin-head {
+  text-align: center;
+}
+
+.text-tarasov-head {
+  text-align: center;
+}
+
+.text-anohin-head {
+  text-align: center;
+
+}
+
+.image-zavarin{
+  background: url('/static/pictures/zavarin.jpg');
+  background-size: cover;
+  height: 230px;
+}
+
+.image-tarasov{
+  background: url('/static/pictures/tarasov.jpg');
+  background-size: cover;
+  height: 300px;
+}
+
+.image-anohin{
+  background: url('/static/pictures/anohin.jpg');
+  background-size: cover;
+  height: 230px;
+}
+
+.image-back-contact {
+  background: url('/static/pictures/back-contact.jpg');
+  background-size: cover;
+
+}
+
+.text-zavarin {
+  color: blue;
+  text-align: center;
+  line-height: 55px;
+}
+
+.text-tarasov {
+  color: #870047;
+  text-align: center;
+  line-height: 55px;
+}
+
+.text-anohin {
+  color: white;
+  text-align: center;
+  line-height: 55px;
+
+}
+
+.about-me-zavarin {
+  color: blue;
+  text-align: center;
+  line-height: 30px;
+}
+
+.about-me-tarasov {
+  color: #870047;
+  text-align: center;
+  line-height: 30px;
+}
+
+.about-me-anohin {
+  color: white;
+  text-align: center;
+  line-height: 30px;
+}
+
+.run-string{
+  color: #fffb37;
 }
