доделал нормальный ABOUT , начал делать CONTACT , доделал .

--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -34,15 +34,15 @@
                     font-weight: bold;
                     font-size: 20px;
                     ">
-                    <marquee direction = 'left' scrollamount='10' class="run-string" >Здравствуйте, мы рады видеть вас на нашем сайте<img src="/static/pictures/bye.gif" width="50" height="48" ></marquee>
+                    <marquee direction = 'left' scrollamount='10' class="run-string">Здравствуйте, мы рады видеть вас на нашем сайте<img src="/static/pictures/bye.gif" width="50" height="48" ></marquee>
                     <!--marquee нужен для бегущей строки + в конце гифка-->
                 </div>
 
 
 
-            <div class="rectangle"><div class="text-rectangle">Добрый день, будем кратки, люди двадцать первого века имеют очень мало свободного времени, это следствие развитости технологий
+            <div class="rectangle" border="grey"><div class="text-rectangle">Добрый день, будем кратки, люди двадцать первого века имеют очень мало свободного времени, это следствие развитости технологий
             , мы тоже развиваемся и хотим сэкономить вам очень много времени, которое вы бы проводили в поисках информации о культурных достопримечательностях города Екатеринбурга.
-             Мы лишь неопытные веб-программисты и это наш первый совместный проект. Помимо уже зафиксированных на карте мест будут добавляться новые. СПАСИБО что пользуетесь нашим сайтом ,мы будем развивать его дальше, оставайтесь с нами. <h1 class="text-rectangle-thx">СПАСИБО!!!</h1> </div></div>
+             Мы лишь неопытные веб-программисты и это наш первый совместный проект. Помимо уже зафиксированных на карте мест будут добавляться новые. СПАСИБО что пользуетесь нашим сайтом ,мы будем развивать его дальше, оставайтесь с нами.<h1 class="text-rectangle-thx">СПАСИБО!!!</h1> </div></div>
 
             </aside>
 
