--- a/static/main-static/css/style.css
+++ b/static/main-static/css/style.css
@@ -9449,14 +9449,15 @@ textarea.form-control {
     display: table;
     width: 600px;
     height: 230px;
-    background: white;
+    background: black;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    background: linear-gradient( #A92A55 , transparent);
 }
 
 .text-rectangle {
-  color: cadetblue;
+  color: white;
   text-align: center;
 }
 
@@ -9517,13 +9518,15 @@ textarea.form-control {
 .image-tarasov{
   background: url('/static/pictures/tarasov.jpg');
   background-size: cover;
-  height: 300px;
+  height: 230px;
+  width: 230px;
 }
 
 .image-anohin{
   background: url('/static/pictures/anohin.jpg');
   background-size: cover;
   height: 230px;
+  width: 230px;
 }
 
 .image-back-contact {
@@ -9570,5 +9573,5 @@ textarea.form-control {
 }
 
 .run-string{
-  color: #fffb37;
+  color: yellow;
 }
