--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -29,24 +29,24 @@
 
                 <div class="rectangle-zavarin">
                     <img src='/static/pictures/zavarin.jpg' align="right" class="image-zavarin">
-                        <div class="text-zavarin-head"><h4>Заварин Михаил Алексеевич</h4></div><div class="text-zavarin">ВК : <a href="https://vk.com/m.zavarin2015">https://vk.com/m.zavarin2015</a> <br />
-                    Mail : <br /> <div class="about-me-zavarin">Коротко обо мне : Ученик 10 А класса Лицея№180 ,,Полифорум"</div></div>
+                        <div class="text-zavarin-head"><h4>Заварин Михаил Алексеевич</h4></div><div class="text-zavarin"><br />
+                    Mail : mr.lev-tarasov41@yandex.ru <br /> <div class="about-me-zavarin">Коротко обо мне : Ученик 10 А класса Лицея№180 ,,Полифорум"</div></div>
 
                 </div>
 
                 <div class="rectangle-tarasov">
                     <div class="text-tarasov-head">
                         <img src='/static/pictures/tarasov.jpg' align="right" class="image-tarasov">
-                        <h4>Тарасов Лев Владиславович</h4></div><div class="text-tarasov">ВК : <a href="https://vk.com/grand_bibster_bu">https://vk.com/grand_bibster_bu</a><br />
-                    Mail : Levil6.6.4@yandex.ru<br /> <div class="about-me-tarasov">Коротко обо мне : Ученик 10 А класса Лицея№180 ,,Полифорум" , начинающий веб-программист</div> </div>
+                        <h4>Тарасов Лев Владиславович</h4></div><div class="text-tarasov"><br />
+                    Mail :  mr.lev-tarasov41@yandex.ru <br /> <div class="about-me-tarasov">Коротко обо мне : Ученик 10 А класса Лицея№180 ,,Полифорум" , начинающий веб-программист</div> </div>
 
                 </div>
 
                 <div class="rectangle-anohin">
                     <div class="text-anohin-head">
                         <img src='/static/pictures/anohin.jpg' class="image-anohin" align="right">
-                            <h4>Анохин Максим Владимирович</h4></div><div class="text-anohin">ВК : <a href="https://vk.com/maxoriy">https://vk.com/maxoriy</a> <br />
-                    Mail : <br /> <div class="about-me-anohin">Коротко обо мне : Ученик 10 А класса Лицея№180 ,,Полифорум" </div></div>
+                            <h4>Анохин Максим Владимирович</h4></div><div class="text-anohin"><br />
+                    Mail :  mr.lev-tarasov41@yandex.ru <br /> <div class="about-me-anohin">Коротко обо мне : Ученик 10 А класса Лицея№180 ,,Полифорум" </div></div>
 
                 </div>
 
