--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -34,15 +34,37 @@
                     font-weight: bold;
                     font-size: 20px;
                     ">
-                    <marquee direction = 'left' scrollamount='10' class="run-string">Здравствуйте, мы рады видеть вас на нашем сайте<img src="/static/pictures/bye.gif" width="50" height="48" ></marquee>
+                    <marquee direction = 'left' scrollamount='10' class="run-string-hello"><img src="/static/pictures/bye.gif" width="50" height="48" >Здравствуйте, мы рады видеть вас на нашем сайте<img src="/static/pictures/bye.gif" width="50" height="48" ></marquee>
                     <!--marquee нужен для бегущей строки + в конце гифка-->
                 </div>
 
+            <div style="
+                    word-spacing: 4px;
+                    font-family: fantasy;
+                    color: blue;
+                    font-weight: bold;
+                    font-size: 20px;
+                    letter-spacing: 1.4px;
+                    ">
+                    <marquee direction = 'left' scrollamount='10' class="run-string-help"><img src="/static/pictures/help.gif" width="80" height="48" >По любым вашим вопросам или предложениям можете писать нам на почту mr.lev-tarasov41@yandex.ru , мы вам поможем!<img src="/static/pictures/help.gif" width="80" height="48" ></marquee>
 
+            </div>
 
             <div class="rectangle" border="grey"><div class="text-rectangle">Добрый день, будем кратки, люди двадцать первого века имеют очень мало свободного времени, это следствие развитости технологий
             , мы тоже развиваемся и хотим сэкономить вам очень много времени, которое вы бы проводили в поисках информации о культурных достопримечательностях города Екатеринбурга.
              Мы лишь неопытные веб-программисты и это наш первый совместный проект. Помимо уже зафиксированных на карте мест будут добавляться новые. СПАСИБО что пользуетесь нашим сайтом ,мы будем развивать его дальше, оставайтесь с нами.<h1 class="text-rectangle-thx">СПАСИБО!!!</h1> </div></div>
+            <div style="
+                    word-spacing: 4px;
+                    color: white;
+                    font-weight: bold;
+                    font-size: 20px;
+                    text-align: center;
+                    margin-top: 40px;
+                    ">
+                <div>ХОРОШЕГО ДНЯ!</div>
+            </div>
+
+            
 
             </aside>
 
