сделали для всех устройств

--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -26,7 +26,7 @@
                     </div>
 
                 </aside> <!-- END COLORLIB-ASIDE -->
-
+                <div class="group-rectangle">
                 <div class="rectangle-zavarin">
                     <img src='/static/pictures/zavarin.jpg' align="right" class="image-zavarin">
                         <div class="text-zavarin-head"><h4>Заварин Михаил Алексеевич</h4></div><div class="text-zavarin"><br /> <div class="about-me-zavarin">Коротко обо мне : Ученик 10 А класса Лицея№180 ,,Полифорум"</div></div>
@@ -46,7 +46,7 @@
                             <h4>Анохин Максим Владимирович</h4></div><div class="text-anohin"><br /> <div class="about-me-anohin">Коротко обо мне : Ученик 10 А класса Лицея№180 ,,Полифорум" </div></div>
                     
                 </div>
-
+                </div>
             </aside>
 
         </div><!-- END COLORLIB-PAGE -->
