--- a/static/main-static/css/style.css
+++ b/static/main-static/css/style.css
@@ -9456,6 +9456,12 @@ textarea.form-control {
     background: linear-gradient( #A92A55 , transparent);
 }
 
+@media (max-width: 600px) {
+    .rectangle {
+      width: 100%;
+    }
+}
+
 .text-rectangle {
   color: white;
   text-align: center;
@@ -9468,30 +9474,24 @@ textarea.form-control {
 
 .rectangle-zavarin {
     display: table;
-    width: 800px;
+    width: 100%;
     height: 230px;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 50px;
     background: #98ED00;
 }
 
 .rectangle-tarasov {
     display: table;
-    width: 800px;
+    width: 100%;
     height: 230px;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 50px;
     background: #00BD39;
 }
 
 .rectangle-anohin {
     display: table;
-    width: 800px;
+    width: 100%;
     height: 230px;
-    margin-left: auto;
-    margin-right: auto;
     margin-top: 50px;
     background: #A61700;
 }
@@ -9578,4 +9578,16 @@ textarea.form-control {
 
 .run-string-help{
   color: #9C02A7;
+}
+
+.group-rectangle{
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 800px) {
+    .group-rectangle {
+      width: 100%;
+    }
 }
