--- a/templates/shared/js.html
+++ b/templates/shared/js.html
@@ -12,3 +12,4 @@
 <script src="{% static "main-static/js/jquery.animateNumber.min.js" %}"></script>
 <script src="{% static "main-static/js/scrollax.min.js" %}"></script>
 <script src="{% static "main-static/js/main.js" %}"></script>
+<script src="{% static "main-static/js/FUNC.js" %}"></script>
