--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -13,7 +13,7 @@
     </head>
     <body class="offcanvas-info">
     <div class="overlay" id="modal2">
-        <div class="modal" id="modal1">
+        <div class="modal1" id="modal1">
 	            <div class="content">
 		            <h1 class="title">CUUUUUUUUUUUL</h1>
 		            <p>
