--- a/static/main-static/css/style.css
+++ b/static/main-static/css/style.css
@@ -9624,7 +9624,6 @@ textarea.form-control {
 .overlay .modal1 {
   background: white;
   text-align: center;
-  padding: 40px 80px;
   box-shadow: 0px 1px 10px rgba(255, 255, 255, 0.35);
   opacity: 0;
   pointer-events: none;
@@ -9644,6 +9643,7 @@ textarea.form-control {
 }
 
 .overlay .modal1 .content {
+  margin: 80px;
   transform: translate(0, -10px);
   opacity: 0;
   transition: 0.35s ease-in-out;
