--- a/templates/map/master.html
+++ b/templates/map/master.html
@@ -33,7 +33,7 @@
                             <textarea name="" id="message" cols="30" rows="10" class="form-control"></textarea>
                           </div>
                           <div class="form-group">
-                            <input type="submit" value="Добавить комментарий" class="btn py-3 px-4 btn-primary">
+                            <input id="add-comment" type="submit" value="Добавить комментарий" class="btn py-3 px-4 btn-primary">
                           </div>
                         </form>
 		                <a class="btn close-modal" data-modal="#modal1" href="#">Спасибо за комментарий</a>
