--- a/templates/map/map.html
+++ b/templates/map/map.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% block content %}
 
+    {% block contentt %}
+
+    {% endblock contentt %}
 
     <script src="https://api-maps.yandex.ru/2.1/?apikey=ccd08e6c-baa4-4ccd-bb52-405b31957b32&lang=ru_RU" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
