Начинаю связывать комменты с мтеками, криво через инвиз реализовал передачу id открытой метки

--- a/static/main-static/css/style.css
+++ b/static/main-static/css/style.css
@@ -9652,3 +9652,9 @@ textarea.form-control {
 .overlay .modal1 .title {
   margin-top: 0;
 }
+
+.id_mark{
+  visibility: hidden;
+  width: 0;
+  height: 0;
+}
