--- a/templates/comment/comment.html
+++ b/templates/comment/comment.html
@@ -1,8 +1,8 @@
 <div class="content">
     <form method="post" class="p-3 p-md-5 bg-light">
         {% csrf_token %}
-
         <fieldset>
+
       <div class="form-group">
         <label for="id_username">Имя</label>
         <input type="text" class="form-control" name = "username" id="id_username">
@@ -12,6 +12,13 @@
         <label for="id_comment">Комментарий</label>
         <textarea name = "comment" id="id_comment" cols="30" rows="10" class="form-control"></textarea>
       </div>
+
+      <div class = "id_mark">
+        <label for="id_id_mark">ID</label>
+        <input type="number" name = "id_mark" id="id_id_mark">
+      </div>
+
+
       <div class="form-group">
         <input id="submit" type="submit" value="Добавить комментарий" class="btn py-3 px-4 btn-primary">
       </div>
